--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
-      <div class="text11">Shadow:🥚0|N/A|Demand:?/10/div>
+      <div class="text11">Shadow:🥚0|N/A|Demand:?/10</div>
     </div>
 
     <div class="box">
@@ -191,7 +191,7 @@
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
-      <div class="text11">Shadow:🥚0|N/A|Demand:?/10/div>
+      <div class="text11">Shadow:🥚0|N/A|Demand:?/10</div>
     </div>
     <div class="box">
       <img src="https://media.discordapp.net/attachments/995351490472464494/1136110209568358420/Png.png?width=131&height=131" alt="Cat">
@@ -205,7 +205,7 @@
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
-      <div class="text11">Shadow:🥚0|N/A|Demand:?/10/div>
+      <div class="text11">Shadow:🥚0|N/A|Demand:?/10</div>
     </div>
     <div class="box">
       <img src="https://media.discordapp.net/attachments/995351490472464494/1136110178379509881/Png.png?width=131&height=131" alt="Cat">
@@ -219,7 +219,7 @@
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
-      <div class="text11">Shadow:🥚0|N/A|Demand:?/10/div>
+      <div class="text11">Shadow:🥚0|N/A|Demand:?/10</div>
     </div>
 
   </div>
