--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       text-align: center;
       background-color: #226e93;
       padding: 10px;
+      width: 100%;
+      height: 100vh;
     }
     
     .box {
