--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <link rel="icon" href="https://media.discordapp.net/attachments/995351490472464494/1136115865922830436/Revamp_Release.png?width=450&height=450" type="image/png"> <!-- Replace "icon.png" with the path to your icon image file -->
   <meta property="og:title" content="BGMValues">
-  <meta property="og:description" content="The most up to date Bubble Gum Mayhem<br>Created by cole1108 and Sword2DIE">
+  <meta property="og:description" content="The most up to date Bubble Gum Mayhem - Created by cole1108 and Sword2DIE">
   <meta property="og:image" content="https://media.discordapp.net/attachments/995351490472464494/1136115865922830436/Revamp_Release.png?width=450&height=450">
   <meta property="og:url" content="https://bgmvalues.com/">
   <meta property="og:type" content="website">
@@ -176,8 +176,8 @@
       <img src="https://media.discordapp.net/attachments/995351490472464494/1136110129998209054/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Overseer</div>
       <div class="text2">🍀 1 in 5 Million</div>
-      <div class="text3">Normal:🥚185|5.4k|Demand:7/10</div>
-      <div class="text4">Shiny:🥚16|62.5k|Demand:8/10</div>
+      <div class="text3">Normal:🥚403|2.5k|Demand:7/10</div>
+      <div class="text4">Shiny:🥚29|35k|Demand:8/10</div>
       <div class="text5">Chroma:🥚4|250k|Demand:9/10</div>
       <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
@@ -191,8 +191,8 @@
       <img src="https://media.discordapp.net/attachments/995351490472464494/1136110243844210791/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Stardust Shard</div>
       <div class="text2">🍀 1 in 17.5 Million</div>
-      <div class="text3">Normal:🥚87|11.5k|Demand:8/10</div>
-      <div class="text4">Shiny:🥚5|200k|Demand:9/10</div>
+      <div class="text3">Normal:🥚149|6.7k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚13|77k|Demand:9/10</div>
       <div class="text5">Chroma:🥚2|500k|Demand:9.5/10</div>
       <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
@@ -205,8 +205,8 @@
       <img src="https://media.discordapp.net/attachments/995351490472464494/1136110209568358420/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Radiant Leviathan</div>
       <div class="text2">🍀 1 in 60 Million</div>
-      <div class="text3">Normal:🥚16|62.5k|Demand:8.5/10</div>
-      <div class="text4">Shiny:🥚1|O/C|Demand:10/10</div>
+      <div class="text3">Normal:🥚28|36k|Demand:8.5/10</div>
+      <div class="text4">Shiny:🥚4|250k|Demand:9.5/10</div>
       <div class="text5">Chroma:🥚0|N/A|Demand:?/10</div>
       <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
@@ -219,8 +219,8 @@
       <img src="https://media.discordapp.net/attachments/995351490472464494/1136110178379509881/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Oblivion</div>
       <div class="text2">🍀 1 in 176.76 Million</div>
-      <div class="text3">Normal:🥚7|140k|Demand:9.5/10</div>
-      <div class="text4">Shiny:🥚0|N/A|Demand:?/10</div>
+      <div class="text3">Normal:🥚11|112k|Demand:9/10</div>
+      <div class="text4">Shiny:🥚2|450k|Demand:10/10</div>
       <div class="text5">Chroma:🥚0|N/A|Demand:?/10</div>
       <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
