--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <link rel="icon" href="https://media.discordapp.net/attachments/995351490472464494/1136115865922830436/Revamp_Release.png?width=450&height=450" type="image/png"> <!-- Replace "icon.png" with the path to your icon image file -->
   <meta property="og:title" content="BGMValues">
-  <meta property="og:description" content="The most up to date Bubble Gum Mayhem - Created by cole1108 and Sword2DIE">
+  <meta property="og:description" content="The most up to date Bubble Gum Mayhem values                 Created by cole1108 and Sword2DIE">
   <meta property="og:image" content="https://media.discordapp.net/attachments/995351490472464494/1136115865922830436/Revamp_Release.png?width=450&height=450">
   <meta property="og:url" content="https://bgmvalues.com/">
   <meta property="og:type" content="website">
